# comfy-tagcomplete

./: .gitignore  README.it.md  README.md  UPDATE.md  __init__.py  category_map.csv  clean_obsolete_tags.py  pyproject.toml
assets/: comfyuitagcomplete.webm  demo.webm
py/: paths.py  tagdata_manager.py  wildcard_processor.py  wildcards.py
tags/: danbooru.csv
web/: settings.js
web/completer/: dropdown_renderer.js  tag_completer.js  virtual_dropdown_controller.js
web/css/: category_pill.css
wildcards/mbe/act/: amzn.txt  buttjob.txt  cwg.txt  dgy.txt  flnlsn.txt  frmbhd.txt  ftjb.txt  lglft.txt  lgsup.txt  lkfrntfrmbhd.txt  miss.txt  missFt.txt  missdyn.txt  nrsing.txt  pldrvr.txt  rvscwg.txt  rvssus.txt  rvsupstrdle.txt  spng.txt  straddle.txt  sus.txt  upstrdle.txt
wildcards/mbe/actff/: ffbrstplng.txt  ffmstrbtng.txt  ffmstrbtng_obj.txt  ffmstrbtngcouch.txt  ffmstrbtnglng.txt  ffmstrbtngsit.txt
wildcards/mbe/actffm/: coop_fellatio.txt  coop_paizuri.txt  coop_tngjb.txt  coop_various.txt
wildcards/mbe/actmmf/: dblblwjb.txt  dblpntrtn.txt
wildcards/mbe/actsolo/: brstplng.txt  mstrbtn_futa.txt  mstrbtng.txt  mstrbtng_obj.txt  mstrbtngcouch.txt  mstrbtnglng.txt  mstrbtngsit.txt
wildcards/mbe/actyr/: yuri.txt  yuribase.txt
wildcards/mbe/blwjob/: blwjb.txt  blwjb_clean.txt  blwjb_full.txt  boobjob.txt  boobjob_mix.txt  boobjob_mix_clean.txt  hndjb.txt  hndjb_cmntng.txt  pzr.txt  pzr_OC.txt  pzr_UC.txt  pzr_clean.txt  pzr_mix.txt  pzr_mix_clean.txt  pzrbrstsq.txt  sidecum.txt  tngjb.txt
wildcards/mbe/prmpt/: exprssn.txt  nsfw_exprssns.txt  rndm_generic.txt  (+2 more)
(+62 files in other folders)
