[project]
name = "comfy-tagcomplete"
description = "Tag completer with wildcard sub-selection and CSV file support"
version = "2.0.0"
license = {file = "LICENSE"}
dependencies = ["sqlite3"]

[project.urls]
Repository = "https://github.com/huchukato/comfy-tagcomplete"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "huchukato"
DisplayName = "ComfyUI-TagComplete"
Icon = ""
